# dep-wofs

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.argo/: wofls-0.1.0.yaml  wofls-alt.yaml  wofls.yaml  wofs-0.1.0.yaml  wofs.yaml  wofs_full_history.yml
.github/workflows/: build-test-docker.yml
.kbatch/: run_mask.py  run_mask.yml
data/: ls_grid.gpkg
dep_wofs/: config.py  dep_wofs.py  grid.py  print_tasks.py  process_tile.py  process_wofls_tile.py  process_wofs_full_history_tile.py  process_wofs_tile.py  processors.py  run_task.py
src/: grid.py  mask.py  print_tasks.py  run_on_pc.sh  run_task.py  wofs.py
